--- a/app/views/student_task/list.html.erb
+++ b/app/views/student_task/list.html.erb
@@ -89,7 +89,8 @@
 <!--# end of first block-->
 <!--# start of second block-->
 
-  <% @student_tasks.group_by{ |p| p.course.try :name}.each do |student_tasks|%>
+  <% group = @student_tasks.group_by(&student_task.course.try :name)%>
+  <% group.each do |student_tasks| %>
 <div class="topictable" style="width: 65%; display: inline-block; border: 1px solid #FFFFFF">
 <!--  add a for loop to check different course-->
   <table class="table table-striped" cellpadding="2">
