--- a/app/views/student_task/list.html.erb
+++ b/app/views/student_task/list.html.erb
@@ -70,46 +70,46 @@
     <strong>Students who have teamed with you<br></strong><br>
 
     <% @students_teamed_with.keys.each do |course_id| %>
-        <strong>&nbsp;&nbsp;<span class="tasknum">&nbsp;<%= @students_teamed_with[course_id].size.to_s %>&nbsp;</span>
-          <%if course_id.nil?%>
-              assignments not associated with any course
-          <%else%>
-              <%=  Course.find(course_id).name %>
-          <%end%>
-          <br></strong><br>
-        <% if @students_teamed_with[course_id].size %>
-            <% @students_teamed_with[course_id].each do |student|%>
-                <span class="notification">&nbsp; &raquo; <%= student %> </span><br/>
-            <% end %>
+      <strong>&nbsp;&nbsp;<span class="tasknum">&nbsp;<%= @students_teamed_with[course_id].size.to_s %>&nbsp;</span>
+        <%if course_id.nil?%>
+          assignments not associated with any course
+        <%else%>
+          <%=  Course.find(course_id).name %>
+        <%end%>
+        <br></strong><br>
+      <% if @students_teamed_with[course_id].size %>
+        <% @students_teamed_with[course_id].each do |student|%>
+          <span class="notification">&nbsp; &raquo; <%= student %> </span><br/>
         <% end %>
+      <% end %>
     <% end %>
 
   </div>
 
-<!--# end of first block-->
-<!--# start of second block-->
+  <!--# end of first block-->
+  <!--# start of second block-->
 
   <% group = @student_tasks.group_by(&:course).each do | course, student_tasks|%>
     <% if course%>
     <%end %>
-<div class="topictable" style="width: 65%; display: inline-block; border: 1px solid #FFFFFF">
-<!--  add a for loop to check different course-->
-  <table class="table table-striped" cellpadding="2">
-    <tr class="taskheader">
-      <th>Assignment</th>
-      <th>Course</th>
-      <th>Topic</th>
-      <th>Current Stage</th>
-      <th>Submission Grade</th>
-<!--      <th>Badges</th>-->
-      <th>Stage Deadline <img src="/assets/info.png" title="You can change 'Preferred Time Zone' in 'Profile' in the banner."/></th>
-      <th>Publishing Rights</th>
-      <th>Make Public <img src="/assets/info.png" title="Checking this means that you provide permission for your/your team's work to be available to others in the class or whomever the instructor chooses, once the submission deadline is passed."/></th>
-    </tr>
-    <% student_tasks.each do |student_task| %>
+    <div class="topictable" style="float: right;width: 80%;margin-bottom: 10px; display: inline-block; border: 1px solid #000000">
+      <!--  add a for loop to check different course-->
+      <table class="table table-striped" cellpadding="2">
+        <tr class="taskheader">
+          <th>Assignment</th>
+          <th>Course</th>
+          <th>Topic</th>
+          <th>Current Stage</th>
+          <th>Submission Grade</th>
+          <!--      <th>Badges</th>-->
+          <th>Stage Deadline <img src="/assets/info.png" title="You can change 'Preferred Time Zone' in 'Profile' in the banner."/></th>
+          <th>Publishing Rights</th>
+          <th>Make Public <img src="/assets/info.png" title="Checking this means that you provide permission for your/your team's work to be available to others in the class or whomever the instructor chooses, once the submission deadline is passed."/></th>
+        </tr>
+        <% student_tasks.each do |student_task| %>
 
-        <% participant = student_task.participant %>
-        <% if student_task.assignment %>
+          <% participant = student_task.participant %>
+          <% if student_task.assignment %>
             <tr class="listingRow">
               <!--assignment also badge at the end-->
               <td><b><%= link_to student_task.assignment.name, :action => 'view', :id => participant %></b><p><%= get_awarded_badges(participant) %></p> </td>
@@ -118,23 +118,23 @@
               <!--topic-->
               <% topic_id = SignedUpTeam.topic_id(participant.parent_id, participant.user_id) %>
               <% if SignUpTopic.exists?(topic_id) %>
-                  <td><%= SignUpTopic.find(topic_id).try :topic_name %></td>
+                <td><%= SignUpTopic.find(topic_id).try :topic_name %></td>
 
               <% else %>
-                  <td>-</td>
+                <td>-</td>
               <% end %>
               <!--current stage-->
               <td>
                 <% if participant.assignment.link_for_current_stage(topic_id)!= nil && participant.assignment.link_for_current_stage(topic_id).length!=0%>
-                    <%= link_to participant.assignment.current_stage_name(topic_id), participant.assignment.link_for_current_stage(topic_id) %>
+                  <%= link_to participant.assignment.current_stage_name(topic_id), participant.assignment.link_for_current_stage(topic_id) %>
                 <% else %>
-                    <%= participant.assignment.current_stage_name(topic_id) %>
+                  <%= participant.assignment.current_stage_name(topic_id) %>
                 <% end %>
               </td>
               <!--submission grade-->
               <td><%= get_review_grade_info(participant) %></td>
               <!--badges-->
-<!--              <td><%#= get_awarded_badges(participant) %></td>-->
+              <!--              <td><%#= get_awarded_badges(participant) %></td>-->
               <!--stage deadline-->
               <td><%= student_task.stage_deadline.in_time_zone(session[:user].timezonepref) %></td>
               <!--publish rights-->
@@ -146,10 +146,11 @@
                 </td>
               <% end %>
             </tr>
+          <% end %>
         <% end %>
-    <% end %>
-  </table>
-</div>
-    <% end %>
-<!--#end of second block-->
+      </table>
+    </div>
+
+  <% end %>
+  <!--#end of second block-->
 </div>
